<resources>

    <string name="app_name">Grammar Master</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="rate">Rate this App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="exit">Exit App</string>
    <string name="apiKey">bc8a329b2581891279880795edf742313dc3876b375306ef</string>

    <string name="banner_under_webview">ca-app-pub-4137439985376631/9576350619</string>
    <string name="offfline_interstitials">ca-app-pub-4137439985376631/2591615182</string>
    <string name="offline_onback">ca-app-pub-3940256099942544/1033173712</string>
    <string name="exit_banner">ca-app-pub-4137439985376631/3323015026</string>
    <string name="quiz_complete">ca-app-pub-4137439985376631/7124327531</string>

    <string name="download">Download ယူရန်များ</string>
    <string name="app_open">ca-app-pub-4137439985376631/1650742998</string>
    <string name="splash_description">Please wait..</string>
    <string name="splah_text">App is loading..</string>
    <string name="more_menu">more</string>
    <string name="concent">Ad Consent</string>
    <string name="ads_consent">Privacy</string>
    <string name="icon_description">icon descriptions</string>
    <string name="card_title">title</string>
    <string name="charttext">sample text</string>
    <string name="status">Status</string>
    <string name="right_and_wrong_indicator">Right and Wrong Indicator\n</string>
    <string name="question_goes_here">Quiz Questions</string>
    <string name="option_a">option A</string>
    <string name="option_b">Option B\n</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="next">Next</string>
    <string name="explanations">ရှင်းလင်းချက်</string>
    <string name="viewPager">Swipe Left or Right</string>
    <string name="tab_descs">Move One Tabs to another</string>

    <string name="do_you_want_to_exit">You want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>


    <!--    Ad format	Sample ad unit ID-->
    <!--    App Open	ca-app-pub-3940256099942544/3419835294-->
    <!--    Adaptive Banner	ca-app-pub-3940256099942544/9214589741-->
    <!--    Banner	ca-app-pub-3940256099942544/6300978111-->
    <!--    Interstitial	ca-app-pub-3940256099942544/1033173712-->
    <!--    Interstitial Video	ca-app-pub-3940256099942544/8691691433-->
    <!--    Rewarded	ca-app-pub-3940256099942544/5224354917-->
    <!--    Rewarded Interstitial	ca-app-pub-3940256099942544/5354046379-->
    <!--    Native Advanced	ca-app-pub-3940256099942544/2247696110-->
    <!--    Native Advanced Video	ca-app-pub-3940256099942544/1044960115-->
