<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:title="Quiz Review"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="200dp">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chartView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/chartCenterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/charttext"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </FrameLayout>

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="2dp"
            android:text="@string/app_name"
            android:textColor="#0040FF"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStatus"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/tranperrant_bg"
        android:text="@string/status"
        android:layout_gravity="center"
        android:textColor="#304FFE"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
